--- a/mod2_sol/index.html
+++ b/mod2_sol/index.html
@@ -2,11 +2,34 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <title>Module 2 Coding Assignment</title>
 </head>
 <body>
-  <h1></h1>
-  <div>
+  <h1>Our Menu</h1>
+  <div class="row">
+    <div id="chicken" class="col-lg-4 col-md-6 col-sm-12">
+      <div class="menu_item">
+      <h3>Chicken</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut convallis magna nec mauris euismod, sagittis ornare lorem laoreet. Proin consectetur faucibus lectus. Fusce id ipsum porta, tempor massa eu, blandit erat. Duis finibus erat vel tincidunt semper. Nam dignissim diam nec elementum faucibus. Nunc tincidunt lorem nisl, non dignissim massa fermentum nec. Curabitur porta quam vel tellus tempor, nec ornare tellus maximus. Nulla eleifend nisi tincidunt arcu placerat ultrices. Vestibulum vitae tellus aliquam, pharetra neque ut, convallis purus. Fusce ut accumsan ipsum.
+      </p>
+      </div>
+    </div>
+    <div id="beef" class="col-lg-4 col-md-6 col-sm-12">
+      <div class="menu_item">
+      <h3>Beef</h3>
+      <p>Nullam cursus varius tortor vitae pellentesque. Nunc placerat lobortis sem non aliquam. Curabitur consequat scelerisque quam, quis bibendum lacus tincidunt nec. Proin pellentesque nibh leo, sed consequat tellus mollis ut. Nunc mollis leo elementum justo pellentesque, at venenatis orci facilisis. Donec consectetur nibh non velit finibus venenatis. Vestibulum blandit libero metus, nec dignissim leo maximus ut. Phasellus mattis justo et lorem commodo, sed mattis mi hendrerit. Sed bibendum arcu sem, eget malesuada magna convallis vitae. Mauris lobortis vel leo sed aliquet. Sed bibendum dui quis ante dapibus consectetur. Praesent a ante laoreet, accumsan dolor in, maximus augue.
+      </p>
+      </div>
+    </div>
+    <div id="sushi" class="col-lg-4 col-md-12 col-sm-12">
+      <div class="menu_item">
+      <h3>Sushi</h3>
+      <p>Praesent arcu mauris, pretium eget maximus eu, tempor non diam. Vivamus in imperdiet nisl. Maecenas dui risus, ultrices eu sapien ut, tempus dapibus lectus. Phasellus quam leo, luctus in sapien mattis, varius egestas massa. Sed non eros sed ante tempor hendrerit a id mauris. Integer tincidunt euismod odio in feugiat. Fusce rhoncus, ipsum semper semper viverra, libero ante tincidunt leo, vitae consectetur tortor sem a ex. Vivamus sit amet sapien at est gravida lacinia. Nullam elementum semper nisl in lacinia. Fusce maximus magna mi, vel interdum odio mattis vitae.
+      </p>
+      </div>
+    </div>
   
     
 
